--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -39,7 +39,7 @@ asset_index:
     main.checkout-branch.name: "5-2 節：切換工作中版本到分支上並在分支上提交"
     main.current-branch.name: "5-3 節：當前的分支與分離的工作版本"
     main.create-and-checkout-branch.name: "5-4 節：建立並同時切換分支"
-    main.checkout-branch-more.name: "5-5 節：分支列表"
+    main.branch-list.name: "5-5 節：分支列表"
 
   ondisk:
   # level configs of section one: intro
@@ -73,6 +73,6 @@ asset_index:
     checkout-branch: "checkout-branch.yaml"
     current-branch: "current-branch.yaml"
     create-and-checkout-branch: "create-and-checkout-branch.yaml"
-    checkout-branch-more: "checkout-branch-more.yaml"
+    branch-list: "branch-list.yaml"
     
     
