--- a/example/course-resources/fork/images-index.yaml
+++ b/example/course-resources/fork/images-index.yaml
@@ -143,6 +143,6 @@ asset_index:
     intro-create-branch-1: create-and-checkout-branch@intro-create-branch-1.png
     intro-create-branch-2: create-and-checkout-branch@intro-create-branch-2.png
 
-# checkout-branch-more
-    itnro-branch-list: checkout-branch-more@itnro-branch-list.png
-    instruct-open-branch-menu-for-checkout-branch-1: checkout-branch-more@instruct-open-branch-menu-for-checkout-branch-1.png
+# branch-list
+    intro-branch-list: branch-list@intro-branch-list.png
+    instruct-open-branch-menu-for-checkout-branch-1: branch-list@instruct-open-branch-menu-for-checkout-branch-1.png
