--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -40,6 +40,7 @@ asset_index:
     main.current-branch.name: "5-3 節：當前的分支與分離的工作版本"
     main.create-and-checkout-branch.name: "5-4 節：建立並同時切換分支"
     main.branch-list.name: "5-5 節：分支列表"
+    main.create-branch-limit.name: "5-6 節：建立分支的限制"
 
   ondisk:
   # level configs of section one: intro
@@ -74,5 +75,5 @@ asset_index:
     current-branch: "current-branch.yaml"
     create-and-checkout-branch: "create-and-checkout-branch.yaml"
     branch-list: "branch-list.yaml"
-    
+    create-branch-limit: "create-branch-limit.yaml"
     
