Add image and update archive for branch-grow level

--- a/example/course-resources/fork/levels/branch-grow.yaml
+++ b/example/course-resources/fork/levels/branch-grow.yaml
@@ -67,6 +67,8 @@
       needConfirm: false
     - !dev.needAction 
       actions:
+          - !dev.act.idle 
+            seconds: 1
           - !dev.act.git 
             repoSetupName: checkout-branches
             arguments: [ "cherry-pick", "$level-data/create-branch-limit/racing-branch-name-2"]
