--- a/example/course-resources/fork/levels-index.yaml
+++ b/example/course-resources/fork/levels-index.yaml
@@ -42,6 +42,7 @@ asset_index:
     main.branch-list.name: "5-5 節：分支列表"
     main.create-branch-limit.name: "5-6 節：建立分支的限制"
     main.branch-grow.name: "5-7 節：分支的獨立成長"
+    main.branch-and-history.name: "5-8 節：分支代表從當前版本往回追溯的版本歷史"
 
   ondisk:
   # level configs of section one: intro
@@ -78,3 +79,4 @@ asset_index:
     branch-list: "branch-list.yaml"
     create-branch-limit: "create-branch-limit.yaml"
     branch-grow: "branch-grow.yaml"
+    branch-and-history: "branch-and-history.yaml"
