--- a/example/course-resources/fork/level-data/branch-grow-index.yaml
+++ b/example/course-resources/fork/level-data/branch-grow-index.yaml
@@ -110,6 +110,9 @@ asset_index:
 
       再來，我們不可能透過建立${{t/revision}}來讓兩個分道揚鑣的${{t/branch}}重新會合  
       這樣的特性，也確保我們不會不小心讓兩個刻意想要分開的歷史，重新交會
+
+      但是，我們有辦法融合一度分開的歷史嗎？  
+      實際上是有的，請見下章分曉  
       
 
 #repo
