--- a/example/course-resources/fork/level-data/create-and-checkout-branch-index.yaml
+++ b/example/course-resources/fork/level-data/create-and-checkout-branch-index.yaml
@@ -121,6 +121,37 @@ asset_index:
       :==::==: 番茄
       ######## 漢堡肉
       \------/ 漢堡皮
+    file-2:del-1: |+2
+      /------\ 漢堡皮
+      ++ ++ ++ 酸黃瓜
+      ???????? 鳳梨
+      ######## 漢堡肉
+      \------/ 漢堡皮
+    file-2:del-2:v1: |+2
+      /------\ 漢堡皮
+      ++ ++ ++ 酸黃瓜
+      ######## 漢堡肉
+      @@@@@@@@ 第二層漢堡肉
+      \------/ 漢堡皮
+    file-2:del-2:v2: |+2
+      ........ 芝麻
+      /------\ 漢堡皮
+      ++ ++ ++ 酸黃瓜
+      ######## 漢堡肉
+      @@@@@@@@ 第二層漢堡肉
+      \------/ 漢堡皮
+    file-2:del-2:v3: |+2
+      ........ 芝麻
+      /------\ 漢堡皮
+      ++ ++ ++ 酸黃瓜
+      ======== 起司
+      ######## 漢堡肉
+      @@@@@@@@ 第二層漢堡肉
+      \------/ 漢堡皮
+    file-2:del-3: |+2
+      /------\ 麵包
+      ######## 肉
+      \------/ 麵包
     file-2-name: "漢堡.txt"
     file-2-path: "checkout-branches/漢堡.txt"
     file-2-commit-hamburger: "加入漢堡"
@@ -128,6 +159,11 @@ asset_index:
     file-2-commit-alt-2:v1: "加上生菜"
     file-2-commit-alt-2:v2: "加上黃芥末醬"
     file-2-commit-alt-3: "加上番茄"
+    file-2-commit-del-1: "加上鳳梨"
+    file-2-commit-del-2:v1: "加上第二層漢堡肉"
+    file-2-commit-del-2:v2: "加上芝麻"
+    file-2-commit-del-2:v3: "加上起司"
+    file-2-commit-del-3: "反璞歸真"
 
     branch-name-5: "new-branch"
     branch-name-1: "1-for-all"
@@ -136,6 +172,10 @@ asset_index:
     branch-name-hamburger-alt-1: "hamburger+becon"
     branch-name-hamburger-alt-2: "hamburger+letuce"
     branch-name-hamburger-alt-3: "hamburger+tomato"
+    branch-name-hamburger-del-1: "hamburger+pineapple"
+    branch-name-hamburger-del-2: "giant-hamburger"
+    branch-name-hamburger-del-3:v1: "simple-hamburger"
+    branch-name-hamburger-del-3:v2: "sandwich"
     
     
     
